started building out homepage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Custom Industrial Refrigeration Systems, Green Bay, WI
-description: With years of ammonia experience, Straightline Refrigeration offers expert custom design, building, and installation of industrial refrigeration systems.
+title: Hair Salon in Reedsburg, WI
+description: Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 ---
 		<div class="content-area">
 
@@ -15,18 +15,17 @@ description: With years of ammonia experience, Straightline Refrigeration offers
 
 							<div class="heroHeadingWrap fullWidth">
 
-								<div class="col50 heroHeading homeHeading">
+								<div class="heroHeading homeHeading">
 
 									<div class="heroHeading">
 
-										<h1 class="whiteText">Custom Industrial<br>Refrigeration Sytems</h1>
+										<h1 class="whiteText centerText">ALANA'S RUNNIN WITH SCIZZORS</h1>
 
-										<p class="whiteText">Straightline Refrigeration offers expert design-build and plan/spec installation of industrial refrigeration systems.</p>
+										<p class="whiteText centerText">HAIR SALON REEDSBURG, WI</p>
 
 									</div>
 
 								</div>
-								<div class="col50"></div>
 
 							</div>
 
@@ -38,9 +37,9 @@ description: With years of ammonia experience, Straightline Refrigeration offers
 
 				<div class="mobileHeroHeading">
 
-					<h1 class="whiteText">Custom Industrial<br>Refrigeration Sytems</h1>
+					<h1 class="whiteText">ALANA'S RUNNIN WITH SCIZZORS</h1>
 
-					<p class="whiteText">Straightline Refrigeration offers expert design-build and plan/spec installation of industrial refrigeration systems.</p>
+					<p class="whiteText">HAIR SALON REEDSBURG, WI</p>
 
 				</div>
 
@@ -48,24 +47,27 @@ description: With years of ammonia experience, Straightline Refrigeration offers
 
 					<div>
 
-						<section id ="straightlineIntro">
+						<section id ="runninIntro">
 
-							<div id="Intro" class="fullWidth flex-container centerAlignedContainer smallPaddedSection">
+							<div id="Intro" class="fullWidth centerAlignedContainer smallPaddedSection">
 
-								<div class="col50">
+								<div class="pageWidth">
 
 									<div class="">
 
 										<div class="blockText">
 
-											<h2 class="primaryText">Innovation + Refrigeration</h2>
+											<h2 class="primaryText centerText">Look Better, Feel Better, and Have a Good Time Too</h2>
 
 											<p>
-												With years of ammonia experience, Straightline Refrigeration provides exceptional design, building and installation of fully custom industrial refrigeration systems.
-												With a team of carefully assembled experts, we manage each job with the highest standards for customer service, product development, performance and safety.
+												Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 											</p>
-
-											<a href="{{ site.baseurl }}/about/"><button class="centerButton primaryButton">Learn More About Us</button></a>
+											<p>
+												As soon as you walk through the door, you become family.
+											</p>
+											<p>
+												So, whether you're looking for a new color, salon services for men, or an affordable and friendly haircut, you found your perfect partner. At Runnin' With Scizzors, you'll find cuts and styles for men, women, and children of all ages.
+											</p>
 
 										</div>
 
@@ -73,63 +75,61 @@ description: With years of ammonia experience, Straightline Refrigeration offers
 
 								</div>
 
-								<div class="col50">
+							</div>
 
-									<img src="/img/straightlineRefrigerationShop.jpg" class="image">
+							<div class="fullWidth centeredContainer">
 
-								</div>
+								<h2 class="primaryText">Nice Words Some Great Customers Have Shared</h2>
 
 							</div>
 
-						</section>
+							<div class="fullWidth">
 
-						<section id="featuredProject">
-
-							<div class="fullWidth centeredContainer" id="featuredProjectWrap">
-
-								<div id="projectOverlay">
-
-									<div clas="pageWidth">
-
-										<h2 class="whiteText">Featured Project Title</h2>
-
-										<p class="whiteText">Featured project description</p>
-
-										<a href="{{ site.baseurl }}/projects/"><button class="centerButton primaryButton">View Full Project</button></a>
-
-									</div>
-
-								</div>
-
-							</div>
-
-						</section>
-
-						<section id ="companyIntro">
-
-							<div class="fullWidth flex-container-reverse centerAlignedContainer smallPaddedSection">
-
-								<div class="col50">
-
-									<img src="/img/straightlineRefrigerationShop.jpg" class="image">
-
-								</div>
-
-								<div class="col50">
+								<div class="pageWidth">
 
 									<div class="">
 
-										<div class="blockText">
+										<div class="blockText flex-container">
 
-											<h2 class="primaryText">Our Approach—A Major Cool Factor</h2>
+											<div class="col30">
 
-											<p>
-												At Straightline Refrigeration, you’ll have one straight line of communication through all stages of your project. The project foreman will serve as your main contact but works
-												collaboratively with a full support team throughout every stage of the project from initial consultation to project completion. With direct access to the experts who actually
-												get their hands dirty, you’ll find our team to be responsive, capable and flexible to accommodate your unique situation and needs.
-											</p>
+												<div class ="blockText">
 
-											<a href="{{ site.baseurl }}/about/"><button class="centerButton primaryButton">Learn More About Us</button></a>
+													<p>
+														" Alana is a truly experienced professional and is phenomenal with color/highlights! Highly recommended!! Thanks Alana! "
+													</p>
+													<h3 class="primaryText">-Valerie Steinhorst</h3>
+
+												</div>
+
+											</div>
+
+											<div class="col30">
+
+												<div class ="blockText">
+
+													<p>
+														" Best there is and the only one I trust with mine and my kid's hair. Alana is sweet, kind, and always makes my day brighter when I see her.
+														She was born with magic hands and does an awesome job every time! "
+													</p>
+													<h3 class="primaryText">-Tracy Barkus</h3>
+
+												</div>
+
+											</div>
+
+											<div class="col30">
+
+												<div class ="blockText">
+
+													<p>
+														" Alana is the only person I trust with my hair! I tell anyone and everyone to go to her! She has an amazing personality and can make you feel beautiful inside and out! "
+													</p>
+													<h3 class="primaryText">-Kayla Westerwelle</h3>
+
+												</div>
+
+											</div>
 
 										</div>
 
@@ -141,141 +141,33 @@ description: With years of ammonia experience, Straightline Refrigeration offers
 
 						</section>
 
-						<section id ="industries">
+						<section>
 
-							<div>
+							<div class = "fullWidth blackBlock paddedSection">
 
-								<div class="pageWidth">
+								<div class = "pageWidth">
 
-									<h2 class="primaryText centerText">Industries We Serve</h2>
+									<h2 class="whiteText centerText">Haircuts and Styling Services</h2>
 
 								</div>
 
-								<div class="fullWidth flex-container">
+								<div class="pageWidth buttonWrap">
 
-									<div class="col30 serviceImage">
+									<div class="col30">
 
-										<a href="{{ site.baseurl }}/projects/">
-
-											<div class="overlayWrap" data-tilt data-tilt-max="20" data-tilt-speed="400" data-tilt-perspective="2000">
-
-												<img class="blockImage" src="{{site.baseurl}}/img/serviceIndustry5.jpg">
-
-												<div class="serviceTitle">
-
-													<h3 class="title whiteText">Dairy</h3>
-
-												</div>
-
-												<div class="featureOverlay">
-
-													<div class="borderedOverlay">
-
-													</div>
-
-												</div>
-
-											</div>
-
-										</a>
-
-										<div class="descWrap">
-
-                      <p>
-                        Short Description of the dairy industry and how Straightline can help them and adds value to their organization when hired
-                      </p>
-
-                      <div>
-
-                        <a href="" class="iconWrap"><h4 class="primaryText">Learn More </h4><i class="serviceIcon primaryIcon fas fa-chevron-right"></i></a>
-
-                      </div>
-
-                    </div>
+										<a href="{{ site.baseurl }}/contact/"><button class="whiteButton">Cut and Trim</button></a>
 
 									</div>
 
-									<div class="col30 serviceImage">
+									<div class="col30">
 
-										<a href="{{ site.baseurl }}/projects/">
-
-											<div class="overlayWrap" data-tilt data-tilt-max="20" data-tilt-speed="400" data-tilt-perspective="2000">
-
-												<img class="blockImage" src="{{site.baseurl}}/img/serviceIndustry4.jpg">
-
-												<div class="serviceTitle">
-
-													<h3 class="title whiteText">Food Processing</h3>
-
-												</div>
-
-												<div class="featureOverlay">
-
-													<div class="borderedOverlay">
-
-													</div>
-
-												</div>
-
-											</div>
-
-										</a>
-
-										<div class="descWrap">
-
-                      <p>
-                        Short Description of the food processing industry and how Straightline can help them and adds value to their organization when hired
-                      </p>
-
-                      <div>
-
-                        <a href="" class="iconWrap"><h4 class="primaryText">Learn More </h4><i class="serviceIcon primaryIcon fas fa-chevron-right"></i></a>
-
-                      </div>
-
-                    </div>
+										<a href="{{ site.baseurl }}/contact/"><button class="whiteButton">Color</button></a>
 
 									</div>
 
-									<div class="col30 serviceImage">
+									<div class="col30">
 
-										<a href="{{ site.baseurl }}/projects/">
-
-											<div class="overlayWrap" data-tilt data-tilt-max="20" data-tilt-speed="400" data-tilt-perspective="2000">
-
-												<img class="blockImage" src="{{site.baseurl}}/img/serviceIndustry3.jpg">
-
-												<div class="serviceTitle">
-
-													<h3 class="title whiteText">Cold Storage</h3>
-
-												</div>
-
-												<div class="featureOverlay">
-
-													<div class="borderedOverlay">
-
-													</div>
-
-												</div>
-
-											</div>
-
-										</a>
-
-										<div class="descWrap">
-
-                      <p>
-                        Short Description of the third industry and how Straightline can help them and adds value to their organization when hired
-                      </p>
-
-                      <div>
-
-                        <a href="" class="iconWrap"><h4 class="primaryText">Learn More </h4><i class="serviceIcon primaryIcon fas fa-chevron-right"></i></a>
-
-                      </div>
-
-                    </div>
+										<a href="{{ site.baseurl }}/contact/"><button class="whiteButton">Styling</button></a>
 
 									</div>
 
@@ -285,83 +177,60 @@ description: With years of ammonia experience, Straightline Refrigeration offers
 
 						</section>
 
-						<section id="clientTestimonials">
+						<section id="hours" class="smallPaddedSection">
 
-							<div id="testimonials" class="fullWidth centeredContainer">
+							<div id="hoursWrap" class="pageWidth">
 
-								<div class="pageWidth">
+								<div class="hours">
 
-									<h2 class="whiteText">From Our Customers</h2>
-
-								</div>
-
-							</div>
-
-						</section>
-
-						<section id="certifications">
-
-							<div class="fullWidth greyBlock centeredContainer smallPaddedSection">
-
-								<div class="pageWidth">
-
-									<h2 class="primaryText">Certified by Some of the Biggest Names in the Industry</h2>
+									<h4>Sunday</h4>
+									<p>Closed</p>
 
 								</div>
 
-									<div class="pageWidth flex-container">
+								<div class="hours">
 
-										<div class="col20">
+									<h4>Monday</h4>
+									<p>Closed</p>
 
-												<div class="logoWrap">
+								</div>
 
-													<img src ="/img/IIAR_logo_swoosh_small.png" class="certLogo">
+								<div class="hours">
 
-												</div>
+									<h4>Tuesday</h4>
+									<p>Closed</p>
 
-										</div>
+								</div>
 
-										<div class="col20">
+								<div class="hours">
 
-												<div class="logoWrap">
+									<h4>Wednesday</h4>
+									<p>Closed</p>
 
-													<img src ="/img/pipeWeldingBeureauTransparent.png" class="certLogo">
+								</div>
 
-												</div>
+								<div class="hours">
 
-										</div>
+									<h4>Thursday</h4>
+									<p>Closed</p>
 
-										<div class="col20">
+								</div>
 
-												<div class="logoWrap">
+								<div class="hours">
 
-													<img src ="/img/ISN_WebFriendlyBadge.png" class="certLogo">
+									<h4>Friday</h4>
+									<p>Closed</p>
 
-												</div>
+								</div>
 
-										</div>
+								<div class="hours">
 
-										<div class="col20">
+									<h4>Saturday</h4>
+									<p>Closed</p>
 
-												<div class="logoWrap">
+								</div>
 
-													<img src ="/img/ua-logo-transparent2.png" class="certLogo">
 
-												</div>
-
-										</div>
-
-										<div class="col20">
-
-												<div class="logoWrap">
-
-													<img src ="/img/MCAA.png" class="certLogo">
-
-												</div>
-
-										</div>
-
-									</div>
 
 							</div>
 
