added services page and contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Contact | Custom Industrial Refrigeration Systems, Green Bay, WI
-description: Contact Straightline Refrigeration to get started on a custom project today. You bring the challenge or vision and we'll develop a smart solid plan!
+title: Contact | Hair Salon in Reedsburg, WI
+description: Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 ---
 
 	<div id="primary" class="content-area">
@@ -10,24 +10,21 @@ description: Contact Straightline Refrigeration to get started on a custom proje
 
 			<section id="contactHero">
 
-				<div id="homeHero" class="hero">
+				<div id="contactHero" class="hero">
 
 					<div class="heroOverlay">
 
 						<div class="heroHeadingWrap fullWidth">
 
-							<div class="col50 heroHeading homeHeading">
+							<div class="heroHeading homeHeading">
 
 								<div class="heroHeading">
 
-									<h1 class="whiteText">Drop Us a Line</h1>
-
-									<p class="whiteText"></p>
+									<h1 class="whiteText centerText">Contact Runnin With Scizzors</h1>
 
 								</div>
 
 							</div>
-							<div class="col50"></div>
 
 						</div>
 
@@ -39,84 +36,96 @@ description: Contact Straightline Refrigeration to get started on a custom proje
 
 			<div class="mobileHeroHeading">
 
-				<h1 class="whiteText">Drop Us a Line</h1>
+				<h1 class="whiteText">Contact Runnin With Scizzors</h1>
 
 			</div>
 
-			<section id ="contactContent">
+				<section id="hours" class="smallPaddedSection">
 
-				<div id="contactWrap">
+					<div id="hoursWrap" class="pageWidth">
 
-					<div class="pageWidth flex-container centeredContainer">
+						<div class="hours">
 
-						<div id="formWrap">
+							<h4 class="centerText">Sunday</h4>
+							<p class="centerText">Closed</p>
 
-							<h4 class="redText">Contact Straightline Refrigeration</h4>
+						</div>
 
-							<p>
-								Whether a small challenge or a grand vision, we'll start with a solid plan. Set up a consultation!
-							</p>
+						<div class="hours">
 
-							<h3>Call us at <a class="plainLink" href="tel: (920)903-1043">(920)903-1043</a></h3>
+							<h4 class="centerText">Monday</h4>
+							<p class="centerText">9am - 8pm</p>
 
-							<p>Or email us by completing the following form.</p>
+						</div>
 
-							<div class="col60 contactWrap centeredContainer">
+						<div class="hours">
 
-								<form id="primaryContact" action="https://formspree.io/jparsons@insightcreative.com" method="post">
+							<h4 class="centerText">Tuesday</h4>
+							<p class="centerText">9am - 8pm</p>
 
-								  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-								  <input type="hidden" name="_next" value="http://127.0.0.1:4000/jekyllTest/thank-you/" />
+						</div>
 
-								  <!-- all your input fields here.... -->
-								  <input type='text' name='firstName' placeholder='First Name' required/>
+						<div class="hours">
 
-									<input type='text' name='lastName' placeholder='Last Name'/>
+							<h4 class="centerText">Wednesday</h4>
+							<p class="centerText">Closed</p>
 
-									<input type='email' name='_replyto' placeholder='you@email.com'/>
+						</div>
 
-									<input type='phone' name='phone' placeholder='Phone'/>
+						<div class="hours">
 
-									<textarea name="message" placeholder='Leave your message here'></textarea>
+							<h4 class="centerText">Thursday</h4>
+							<p class="centerText">9am - 8pm</p>
 
-									<input type="text" name="_gotcha" style="display:none" />
+						</div>
 
-								  <input class="primaryButton" type='submit' value='Send Your Message' />
+						<div class="hours">
 
-								</form>
+							<h4 class="centerText">Friday</h4>
+							<p class="centerText">9am - 8pm</p>
 
-							</div>
+						</div>
+
+						<div class="hours">
+
+							<h4 class="centerText">Saturday</h4>
+							<p class="centerText">9am - 2pm</p>
 
 						</div>
 
 					</div>
 
-				</div>
+				</section>
 
-				<div class="pageWidth paddedSection">
+				<section id ="contactInfo">
 
-					<div class="contactWrap">
+					<div class="pageWidth centerText">
 
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2857.1358334270067!2d-88.4374370199389!3d44.26602502831783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8803b7061f51df53%3A0xc44fc214a0c9406b!2sStraightline+Refrigeration!5e0!3m2!1sen!2sus!4v1537098566983" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<h2 class="centerText">Alana's Runnin With Scizzors</h2>
 
-						<h5 class="primaryText">Straightline Refrigeration</h5>
+						<h3 class = "centerText">Hair Salon Reedsburg, WI</h3>
 
-						<a href="tel:920-903-1043" class="plainLink">(920)903-1043</a>
+						<h3>137 S Walnut St, Reedsburg, WI 53959</h3>
 
-						<p>1925 West Packard Street <br> Appleton, WI 54914</p>
+						<a href="tel:608-524-0505" class="plainLink">608-524-0505</a>
 
 					</div>
 
-				</div>
+				</section>
 
-				<section id="cd-google-map" data-aos="fade-up">
-	        <div id="google-container"></div>
-	        <div id="cd-zoom-in"></div>
-	        <div id="cd-zoom-out"></div>
-	        <address>1816 Sal St, Green Bay, WI 54302</address>
-    		</section>
+				<section id="contactMap">
 
-			</section>
+					<div class="fullWidth flex-container">
+
+							<div class="fullWidth">
+
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2892.588027491209!2d-90.01026788450618!3d43.53178297912561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87fdf585603faa35%3A0xc7be9d78347ad5ab!2sAlana&#39;s+Runnin+With+Scizzors%2C+LLC!5e0!3m2!1sen!2sus!4v1537713317035" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+							</div>
+
+						</div>
+
+					</section>
 
 		</main>
 
