--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 								<div class="pageWidth">
 
-									<div class="">
+									<div>
 
 										<div class="blockText">
 
-											<h2 class="primaryText centerText">Look Better, Feel Better, and Have a Good Time Too</h2>
+											<h2 class="centerText">Look Better, Feel Better, and Have a Good Time Too</h2>
 
 											<p>
 												Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
@@ -79,7 +79,7 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 							<div class="fullWidth centeredContainer">
 
-								<h2 class="primaryText">Nice Words Some Great Customers Have Shared</h2>
+								<h2>Nice Words Some Great Customers Have Shared</h2>
 
 							</div>
 
@@ -301,79 +301,73 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut1.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut1.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut2.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut2.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut4.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut4.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut5.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut6.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut6.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut10.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut10.jpg" class="portfolioImage">
+									<img src="/img/portfolio/maleCut1.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/maleCut1.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut11.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut11.jpg" class="portfolioImage">
+									<img src="/img/portfolio/maleCut2.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/maleCut2.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut15.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut15.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut16.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut16.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut17.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
 								<div>
 
-									<img src="/img/portfolio/femaleCut17.jpg" class="portfolioImage">
-
-								</div>
-
-								<div>
-
-									<img src="/img/portfolio/femaleCut18.jpg" class="portfolioImage">
+									<img src="/img/portfolio/femaleCut18.jpg" class="portfolioImage" alt="haircut by hairstylist Alana Murdock">
 
 								</div>
 
@@ -381,35 +375,13 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 						</section>
 
-						<div class="siteCTAWrap">
-
-							<div class="CTAoverlay">
-
-									<div class="CTAcontent">
-
-										<h2 class="whiteText">Let's Talk Solutions</h2>
-
-										<p class="whiteText">Whether a small challenge or a grand vision, we'll start with a solid plan.</p>
-
-										<div class="centeredButton">
-
-											<a href="{{ site.baseurl }}/contact/"><button class="whiteButton">Contact Us</button></a>
-
-										</div>
-
-									</div>
-
-							</div>
-
-						</div>
-
 						<section id="contact">
 
 							<div class="fullWidth flex-container">
 
 									<div class="fullWidth">
 
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2857.1358334270067!2d-88.4374370199389!3d44.26602502831783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8803b7061f51df53%3A0xc44fc214a0c9406b!2sStraightline+Refrigeration!5e0!3m2!1sen!2sus!4v1537098566983" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2892.588027491209!2d-90.01026788450618!3d43.53178297912561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87fdf585603faa35%3A0xc7be9d78347ad5ab!2sAlana&#39;s+Runnin+With+Scizzors%2C+LLC!5e0!3m2!1sen!2sus!4v1537713317035" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 									</div>
 
