changed broken image and text not centered on mobile

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 				<div class="mobileHeroHeading">
 
-					<h1 class="whiteText">ALANA'S RUNNIN WITH SCIZZORS</h1>
+					<h1 class="whiteText centerText">ALANA'S RUNNIN WITH SCIZZORS</h1>
 
-					<p class="whiteText">HAIR SALON REEDSBURG, WI</p>
+					<p class="whiteText centerText">HAIR SALON REEDSBURG, WI</p>
 
 				</div>
 
