--- a/services/index.html
+++ b/services/index.html
@@ -37,9 +37,9 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 				<div class="mobileHeroHeading">
 
-					<h1 class="whiteText">Services</h1>
+					<h1 class="whiteText centerText">Services</h1>
 
-					<p class="whiteText">Professional Hair Services To Enhance Your Image</p>
+					<p class="whiteText centerText">Professional Hair Services To Enhance Your Image</p>
 
 				</div>
 
