--- a/contact/index.html
+++ b/contact/index.html
@@ -36,7 +36,7 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 			<div class="mobileHeroHeading">
 
-				<h1 class="whiteText">Contact Runnin With Scizzors</h1>
+				<h1 class="whiteText centerText">Contact Runnin With Scizzors</h1>
 
 			</div>
 
