fixed copy on homepage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Hair Salon in Reedsburg, WI
-description: Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
+description: Runnin With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 ---
 		<div class="content-area">
 
@@ -60,13 +60,13 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 											<h2 class="centerText">Look Better, Feel Better, and Have a Good Time Too</h2>
 
 											<p>
-												Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
+												Runnin With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 											</p>
 											<p>
 												As soon as you walk through the door, you become family.
 											</p>
 											<p>
-												So, whether you're looking for a new color, salon services for men, or an affordable and friendly haircut, you found your perfect partner. At Runnin' With Scizzors, you'll find cuts and styles for men, women, and children of all ages.
+												So, whether you're looking for a new color, salon services for men, or an affordable and friendly haircut, you found your perfect partner. At Runnin With Scizzors, you'll find cuts and styles for men, women, and children of all ages.
 											</p>
 
 										</div>
@@ -246,7 +246,7 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 
 									<p class="whiteText">
 
-										Runnin' With Scizzors utilizes seventeen years of experience to help you achieve your ideal look. With experience in a wide variety of styles and services from haircuts, coloring, perms all the way to beard trims, updos, and waxing,  you'll love your new look.
+										Runnin With Scizzors utilizes seventeen years of experience to help you achieve your ideal look. With experience in a wide variety of styles and services from haircuts, coloring, perms all the way to beard trims, updos, and waxing,  you'll love your new look.
 
 									</p>
 									<p class="whiteText">
@@ -280,7 +280,7 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 								</div>
 
 								<p>
-									Hi, I'm Alana Murdock. I'm the owner and hair stylist at Runnin' With Scizzors. I've been a hair stylist for seventeen years.
+									Hi, I'm Alana Murdock. I'm the owner and hair stylist at Runnin With Scizzors. I've been a hair stylist for seventeen years.
 									I started going to beauty school at the age of seventeen and started an apprenticeship soon after. My passion is connecting
 									with people and making people feel great about themselves.
 								</p>
