--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contact | Hair Salon in Reedsburg, WI
-description: Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
+description: Runnin With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 ---
 
 	<div id="primary" class="content-area">
