--- a/services/index.html
+++ b/services/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Services | Hair Salon in Reedsburg, WI
-description: Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
+description: Runnin With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 ---
 		<div class="content-area">
 
