--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ description: Runnin With Scizzors is a hair salon dedicated to delivering afford
 
 						<section id="appointment">
 
-							<div id="slantedBackground" class="fullWidth smallPaddedSection">
+							<div id="slantedBackground" class="fullWidth paddedSection">
 
 								<div class="pageWidth">
 
