update headlines for services and contact pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -20,7 +20,7 @@ description: Runnin With Scizzors is a hair salon dedicated to delivering afford
 
 								<div class="heroHeading">
 
-									<h1 class="whiteText centerText">Contact Runnin With Scizzors</h1>
+									<h1 class="whiteText centerText">CONTACT RUNNIN WITH SCIZZORS</h1>
 
 								</div>
 
@@ -36,7 +36,7 @@ description: Runnin With Scizzors is a hair salon dedicated to delivering afford
 
 			<div class="mobileHeroHeading">
 
-				<h1 class="whiteText centerText">Contact Runnin With Scizzors</h1>
+				<h1 class="whiteText centerText">CONTACT RUNNIN WITH SCIZZORS</h1>
 
 			</div>
 
