--- a/services/index.html
+++ b/services/index.html
@@ -19,9 +19,9 @@ description: Runnin With Scizzors is a hair salon dedicated to delivering afford
 
 									<div class="heroHeading">
 
-										<h2 id="heroTitle" class="whiteText centerText">Services</h2>
+										<h2 id="heroTitle" class="whiteText centerText">SERVICES</h2>
 
-										<h1 id="heroDesc" class="whiteText centerText">Professional Hair Services To Enhance Your Image</h1>
+										<h1 id="heroDesc" class="whiteText centerText">PROFESSIONAL HAIR SERVICES TO ENHANCE YOUR IMAGE</h1>
 
 									</div>
 
@@ -37,9 +37,9 @@ description: Runnin With Scizzors is a hair salon dedicated to delivering afford
 
 				<div class="mobileHeroHeading">
 
-					<h1 class="whiteText centerText">Services</h1>
+					<h1 class="whiteText centerText">SERVICES</h1>
 
-					<p class="whiteText centerText">Professional Hair Services To Enhance Your Image</p>
+					<p class="whiteText centerText">PROFESSIONAL HAIR SERVICES TO ENHANCE YOUR IMAGE</p>
 
 				</div>
 
