updates to prices, updates and fixes throughout

--- a/services/index.html
+++ b/services/index.html
@@ -1,220 +1,113 @@
 ---
 layout: default
 title: Services | Hair Salon in Reedsburg, WI
-description: Runnin With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
+description: Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 ---
-		<div class="content-area">
-
-			<main class="site-main">
-
-				<section id="hero">
-
-					<div id="serviceHero" class="hero">
-
-						<div class="heroOverlay">
-
-							<div class="heroHeadingWrap fullWidth">
-
-								<div class="heroHeading homeHeading">
-
-									<div class="heroHeading">
-
-										<h2 id="heroTitle" class="whiteText centerText">SERVICES</h2>
-
-										<h1 id="heroDesc" class="whiteText centerText">PROFESSIONAL HAIR SERVICES TO ENHANCE YOUR IMAGE</h1>
-
-									</div>
-
-								</div>
-
+<div class="content-area">
+	<main class="site-main">
+		<section id="hero">
+			<div id="serviceHero" class="hero">
+				<div class="heroOverlay">
+					<div class="heroHeadingWrap fullWidth">
+						<div class="heroHeading homeHeading">
+							<div class="heroHeading">
+								<h2 id="heroTitle" class="whiteText centerText">Services</h2>
+								<h1 id="heroDesc" class="whiteText centerText">Professional Haircuts and Hair Coloring Services</h1>
 							</div>
-
 						</div>
-
 					</div>
-
-				</section>
-
-				<div class="mobileHeroHeading">
-
-					<h1 class="whiteText centerText">SERVICES</h1>
-
-					<p class="whiteText centerText">PROFESSIONAL HAIR SERVICES TO ENHANCE YOUR IMAGE</p>
-
 				</div>
-
-				<section class="pageContent">
-
-					<section id="pricing" class="paddedSection">
-
-						<div class="pageWidth flex-container">
-
-							<div class = "col30 centerText priceBlock">
-
-								<div class ="outerPriceWrap">
-
-									<h3 class="primaryText">Haircuts</h3>
-
-									<div class="priceWrap">
-
-										<strong><p>Adult Haircut:</p></strong>
-
-										<p>$15</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Child Haircut:(10 and under)</p></strong>
-
-										<p>$11</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Bang Trim: </p></strong>
-
-										<p>$5</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Shampoo:</p></strong>
-
-										<p>$3</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Style After Haircut:</p></strong>
-
-										<p>$5</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Shampoo and Style Only: </p></strong>
-
-										<p>$15</p>
-
-									</div>
-
-								</div>
-
-							</div>
-
-							<div class = "col30 centerText priceBlock">
-
-								<div class="outerPriceWrap">
-
-									<h3 class="primaryText">Color</h3>
-
-									<div class="priceWrap">
-
-										<strong><p>Color:(Full head solid color)</p></strong>
-
-										<p>$55</p>
-
-									</div>
-
-									<h3 class ="primaryText">Foil</h3>
-
-									<div class="priceWrap">
-
-										<strong><p>Full Head:</p></strong>
-
-										<p>$70</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Partial Head: </p></strong>
-
-										<p>$40</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Each additional color with foils:</p></strong>
-
-										<p>$15</p>
-
-									</div>
-
-								</div>
-
-							</div>
-
-							<div class = "col30 centerText priceBlock">
-
-								<div class="outerPriceWrap">
-
-									<h3 class="primaryText">Styling and More</h3>
-
-									<div class="priceWrap">
-
-										<strong><p>Beard Trim:</p></strong>
-
-										<p>$5</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Special Occasion Styles & Updos:</p></strong>
-
-										<p>$15 per 15 minutes</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Waxing:(per area brows, lip, chin etc...)</p></strong>
-
-										<p>$10</p>
-
-									</div>
-
-									<h3 class="primaryText">Perms</h3>
-
-									<div class="priceWrap">
-
-										<strong><p>Regular Wrap:</p></strong>
-
-										<p>$60</p>
-
-									</div>
-
-									<div class="priceWrap">
-
-										<strong><p>Specialty Wrap:</p></strong>
-
-										<p>$75</p>
-
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-						<div class="pageWidth">
-
-							<p class="centerText">Additional charges may apply with length on all chemical services</p>
-
-						</div>
-
-					</section>
-
-				</section>
-
-			</main>
-
+			</div>
+		</section>
+		<div class="mobileHeroHeading">
+			<h1 class="whiteText centerText">Services</h1>
+			<p class="whiteText centerText">Professional Haircuts and Hair Coloring Services</p>
 		</div>
+		<section class="pageContent">
+			<section id="pricing" class="paddedSection">
+				<div class="pricing flex-container">
+					<div class="col30 centerText priceBlock">
+						<div class ="outerPriceWrap">
+							<h3 class="primaryText">Haircuts</h3>
+							<div class="priceWrap">
+								<strong><p class="service">Adult Haircut:</p></strong>
+								<p class="price">$17</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Child Haircut: (10 and under)</p></strong>
+								<p class="price">$13</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Bang Trim: </p></strong>
+								<p class="price">$5</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Shampoo:</p></strong>
+								<p class="price">$3</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Style After Haircut:</p></strong>
+								<p class="price">$5</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Shampoo and Style Only: </p></strong>
+								<p class="price">$17</p>
+							</div>
+						</div>
+					</div>
+					<div class = "col30 centerText priceBlock">
+						<div class="outerPriceWrap">
+							<h3 class="primaryText">Color</h3>
+							<div class="priceWrap">
+								<strong><p class="service">Color: (Full head solid color)</p></strong>
+								<p class="price">$60 and up</p>
+							</div>
+							<h3 class ="primaryText">Foil</h3>
+							<div class="priceWrap">
+								<strong><p class="service">Full Head:</p></strong>
+								<p class="price">$75 and up</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Partial Head: </p></strong>
+								<p class="price">$40</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Each additional color with foils:</p></strong>
+								<p class="price">$20</p>
+							</div>
+						</div>
+					</div>
+					<div class = "col30 centerText priceBlock">
+						<div class="outerPriceWrap">
+							<h3 class="primaryText">Styling and More</h3>
+							<div class="priceWrap">
+								<strong><p class="service">Beard Trim:</p></strong>
+								<p class="price">$5</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Special Occasion Styles & Updos:</p></strong>
+								<p class="price">$30 and up, additional charges with length and time.</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Waxing:</p></strong>
+								<p class="price">$10 per area (brows, lip, chin etc...)</p>
+							</div>
+							<h3 class="primaryText">Perms</h3>
+							<div class="priceWrap">
+								<strong><p class="service">Regular Wrap:</p></strong>
+								<p class="price">$65</p>
+							</div>
+							<div class="priceWrap">
+								<strong><p class="service">Specialty Wrap:</p></strong>
+								<p class="price">$90</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="centerText">
+					<span>Additional charges may apply with length on all chemical services</span>
+				</div>
+			</section>
+		</section>
+	</main>
+</div>
