--- a/contact/index.html
+++ b/contact/index.html
@@ -1,132 +1,72 @@
 ---
 layout: default
 title: Contact | Hair Salon in Reedsburg, WI
-description: Runnin With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
+description: Alana's Runnin' With Scizzors is a hair salon dedicated to delivering affordable haircut services. Hair services with a unique and personalized experience.
 ---
-
 	<div id="primary" class="content-area">
-
 		<main id="main" class="site-main">
-
 			<section id="contactHero">
-
 				<div id="contactHero" class="hero">
-
 					<div class="heroOverlay">
-
 						<div class="heroHeadingWrap fullWidth">
-
 							<div class="heroHeading homeHeading">
-
 								<div class="heroHeading">
-
-									<h1 class="whiteText centerText">CONTACT RUNNIN WITH SCIZZORS</h1>
-
+									<h1 class="heroTitle whiteText centerText">Contact Alana's Runnin' With Scizzors</h1>
 								</div>
-
 							</div>
-
 						</div>
-
 					</div>
-
 				</div>
-
 			</section>
-
 			<div class="mobileHeroHeading">
-
-				<h1 class="whiteText centerText">CONTACT RUNNIN WITH SCIZZORS</h1>
-
+				<h1 class="whiteText centerText">Contact Alana's Runnin' With Scizzors</h1>
 			</div>
-
 				<section id="hours" class="smallPaddedSection">
-
 					<div id="hoursWrap" class="pageWidth">
-
 						<div class="hours">
-
 							<h4 class="centerText">Sunday</h4>
 							<p class="centerText">Closed</p>
-
 						</div>
-
 						<div class="hours">
-
 							<h4 class="centerText">Monday</h4>
 							<p class="centerText">9am - 8pm</p>
-
 						</div>
-
 						<div class="hours">
-
 							<h4 class="centerText">Tuesday</h4>
 							<p class="centerText">9am - 8pm</p>
-
 						</div>
-
 						<div class="hours">
-
 							<h4 class="centerText">Wednesday</h4>
 							<p class="centerText">Closed</p>
-
 						</div>
-
 						<div class="hours">
-
 							<h4 class="centerText">Thursday</h4>
 							<p class="centerText">9am - 8pm</p>
-
 						</div>
-
 						<div class="hours">
-
 							<h4 class="centerText">Friday</h4>
 							<p class="centerText">9am - 8pm</p>
-
 						</div>
-
 						<div class="hours">
-
 							<h4 class="centerText">Saturday</h4>
 							<p class="centerText">9am - 2pm</p>
-
 						</div>
-
 					</div>
-
 				</section>
-
 				<section id ="contactInfo">
-
 					<div class="pageWidth centerText">
-
-						<h2 class="centerText">Alana's Runnin With Scizzors</h2>
-
+						<h2 class="centerText">Alana's Runnin' With Scizzors</h2>
 						<h3 class = "centerText">Hair Salon Reedsburg, WI</h3>
-
 						<h3>137 S Walnut St, Reedsburg, WI 53959</h3>
-
 						<a href="tel:608-524-0505" class="plainLink">608-524-0505</a>
-
 					</div>
-
 				</section>
-
 				<section id="contactMap">
-
 					<div class="fullWidth flex-container">
-
 							<div class="fullWidth">
-
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2892.588027491209!2d-90.01026788450618!3d43.53178297912561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87fdf585603faa35%3A0xc7be9d78347ad5ab!2sAlana&#39;s+Runnin+With+Scizzors%2C+LLC!5e0!3m2!1sen!2sus!4v1537713317035" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
 							</div>
-
 						</div>
-
 					</section>
-
 		</main>
-
 	</div>
