added in cap highlight price that was missed

--- a/services/index.html
+++ b/services/index.html
@@ -72,6 +72,10 @@ description: Runnin' With Scizzors is a hair salon dedicated to delivering affor
 								<p class="price">$40</p>
 							</div>
 							<div class="priceWrap">
+								<strong><p class="service">Cap Highlight: </p></strong>
+								<p class="price">$55</p>
+							</div>
+							<div class="priceWrap">
 								<strong><p class="service">Each additional color with foils:</p></strong>
 								<p class="price">$20</p>
 							</div>
